# LLVM-Pass-Clamp

./: .gitignore  CMakeLists.txt  ImgOptPass.cpp  README.md
build_demo/: count_instructions_final.py  llvm_pass_application_o3  llvm_pass_application_o3_mypass_o3
build_demo/build_filament/: filament_application_compile.sh  filament_compile.sh  llvm_pass_application_o3  llvm_pass_application_o3_mypass_o3
build_demo/build_libpng/: llvm_pass_application_o3  llvm_pass_application_o3_mypass_o3  llvm_pass_test_o3  llvm_pass_test_o3_mypass_o3  llvm_pass_test_o3_mypass_opt1  llvm_pass_test_o3_mypass_opt2
build_demo/build_stb/: check_pass.sh  llvm_pass_application_o1  llvm_pass_application_o1_mypass  perf.data
examples/: filament_example.cpp
